// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: full-pipeline output > agent → chatmode.md 1`] = `
"<!-- AUTO-GENERATED by scripts/sync-copilot.ts — do not edit by hand.
     Source: /Users/erikhenriquealvescunha/Documents/Claude/Projects/erik-portifolio-copilot-port/__tests__/copilot/fixtures/agents/reviewer-fixture.md
     Regenerate with: pnpm sync:copilot -->
<!-- Frontmatter \`tools:\` reflects Copilot tool IDs; prose may reference Claude Code tool names. -->

---
description: Reviews code for quality issues
tools:
  - read_file
  - grep_search
  - file_search
  - run_in_terminal
---

You are a code reviewer. When invoked, read the diff and report issues.
"
`;

exports[`snapshot: full-pipeline output > agent → prompt.md 1`] = `
"<!-- AUTO-GENERATED by scripts/sync-copilot.ts — do not edit by hand.
     Source: /Users/erikhenriquealvescunha/Documents/Claude/Projects/erik-portifolio-copilot-port/__tests__/copilot/fixtures/agents/reviewer-fixture.md
     Regenerate with: pnpm sync:copilot -->

---
mode: agent
description: 'One-shot invocation: Reviews code for quality issues'
tools:
  - read_file
  - grep_search
  - file_search
  - run_in_terminal
---

For this single response, act as the **reviewer-fixture** agent. Persona:

You are a code reviewer. When invoked, read the diff and report issues.
"
`;

exports[`snapshot: full-pipeline output > applyTo (inline body) → instructions.md 1`] = `
"<!-- AUTO-GENERATED by scripts/sync-copilot.ts — do not edit by hand.
     Source: inline body in scripts/copilot-port.config.ts (entry: snap)
     Regenerate with: pnpm sync:copilot -->

---
applyTo: 'src/**'
---

rule X
"
`;

exports[`snapshot: full-pipeline output > claudemd → copilot-instructions.md 1`] = `
"<!-- AUTO-GENERATED by scripts/sync-copilot.ts — do not edit by hand.
     Source: __tests__/copilot/fixtures/claudemd/sample.md
     Regenerate with: pnpm sync:copilot -->

# Sample project

## Project agent dispatch
> **Note:** Auto-trigger is Claude Code only. In Copilot Chat, invoke each prompt manually via \`/<name>\` or switch to the chat mode via \`@<name>\`.


Invoke the named agent before the described action.

| Phase | Trigger | Agent |
|---|---|---|
| Planning | Before invoking writing-plans | architect-reviewer agent |
| Testing | When writing tests | test-automator agent |

## Skill dispatch
> **Note:** Auto-trigger is Claude Code only. In Copilot Chat, invoke each prompt manually via \`/<name>\` or switch to the chat mode via \`@<name>\`.


| Trigger | Skill |
|---|---|
| Before any feature | superpowers:brainstorming skill |
| Before any git commit | commit-commands:commit skill |
"
`;

exports[`snapshot: full-pipeline output > mcp → mcp.json 1`] = `
"{
  "inputs": [
    {
      "type": "promptString",
      "id": "POSTMAN_API_KEY",
      "description": "Value for POSTMAN_API_KEY",
      "password": true
    }
  ],
  "servers": {
    "context7": {
      "type": "stdio",
      "command": "npx",
      "args": [
        "-y",
        "@upstash/context7-mcp"
      ]
    },
    "postman": {
      "type": "http",
      "url": "https://mcp.postman.com/mcp",
      "headers": {
        "Authorization": "Bearer \${input:POSTMAN_API_KEY}",
        "X-Source": "claude-code-plugin"
      }
    }
  }
}
"
`;

exports[`snapshot: full-pipeline output > skill → prompt.md 1`] = `
"<!-- AUTO-GENERATED by scripts/sync-copilot.ts — do not edit by hand.
     Source: /Users/erikhenriquealvescunha/Documents/Claude/Projects/erik-portifolio-copilot-port/__tests__/copilot/fixtures/skills/brainstorming-fixture.md
     Regenerate with: pnpm sync:copilot -->

---
mode: agent
description: 'Manually-invoked prompt — Copilot does not auto-trigger by description. Original Claude Code skill: brainstorming-fixture.'
---


## When to use

Use when starting any conversation — establishes how to find and use skills, requiring Skill tool invocation before ANY response including clarifying questions


# Brainstorming

Help turn ideas into specs.

After approval, invoke <!-- originally referenced [writing-plans] — not ported --> to produce the plan.

"
`;
